--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=6842
-CONNSTR=mongodb+srv://rishabhsharma:varunsharma28@cluster0.1uyybyj.mongodb.net/twenty
-SECRETSTR=qwertyuiop
+CONNSTR=
+SECRETSTR=
 EXPIRES=55m
